# domain-controller

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  README.md  manage_cloudflare.py  pyproject.toml  render.yaml  setup.sh  start.ps1  test_manage_cloudflare.py
apps/users-portal/: README.md
apps/vps-bridge/: README.md
scripts/: git-sync.sh
trading/: README.md  docker-compose.yml
